made menu fixed and set overflow properties

--- a/src/common/components/Sidebar/sidebar.css
+++ b/src/common/components/Sidebar/sidebar.css
@@ -1,6 +1,10 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  overflow: hidden;
 }
 
 .logo {
